fix filp dark mode

--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ body.dark-mode .type .back {
     background-color: #333;
     color: #f0f0f0;
 }
+body.dark-mode .type .front {
+    background-color: #333;
+    color: #f0f0f0;
+}
 
 body.dark-mode .quotation {
     background-color: #333333; 
